--- a/index.html
+++ b/index.html
@@ -153,16 +153,16 @@
                 <h2>CSP Form</h2>
             </div>
             <div class="row">
-                <a href="./csp/cspEXT-en.html">CSP Form English-External (June 7)</a>
+                <a href="./csp-cps/certificate-supplementary-protection-form.html">CSP Form English-External (June 8)</a>
             </div>
             <div class="row">
-                <a href="./csp/cspINT-en.html">CSP Form English-Internal (June 7)</a>
+                <a href="./csp-cps/certificate-supplementary-protection-form-internal.html">CSP Form English-Internal (June 8)</a>
             </div>
             <div class="row">
-                <a href="./csp/cspEXT-fr.html">CSP Form French-External (June 7)</a>
+                <a href="./csp-cps/formulaire-certificat-protection-supplementaire.html">CSP Form French-External (June 8)</a>
             </div>
             <div class="row">
-                <a href="./csp/cspINT-fr.html">CSP Form French-Internal (June 7)</a>
+                <a href="./csp-cps/formulaire-certificat-protection-supplementaire-internal.html">CSP Form French-Internal (June 8)</a>
             </div>
         </div>
 
