--- a/certificate/certificate-supplementary-protection-form.html
+++ b/certificate/certificate-supplementary-protection-form.html
@@ -96,7 +96,7 @@
     var defTop=document.getElementById("def-top");
     defTop.outerHTML=wet.builder.top({
         cdnEnv:"prod",
-        breadcrumbs: [{title: "Home", href: "https://lam-dev.hres.ca/REP-Form/index.html"}],
+        breadcrumbs: [{title: "Home", href: "https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions/guidance-documents/register-certificates.html"}],
         search: true,
         lngLinks:[{
             lang: "fr",
@@ -133,7 +133,7 @@
         var defPreFooter=document.getElementById("def-preFooter");
         defPreFooter.outerHTML=wet.builder.preFooter({
             cdnEnv:"prod",
-            dateModified:"2018-08-30",
+            dateModified:"2019-01-18",
             showShare:true,
             showFeedback:true
         })
@@ -178,7 +178,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/cspAppEXT-en_20180830_1637.min.js"></script>
+<script src="app/scripts/cspAppEXT-en_20190118_1530.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
