--- a/certificate/formulaire-certificat-protection-supplementaire.html
+++ b/certificate/formulaire-certificat-protection-supplementaire.html
@@ -88,7 +88,7 @@
     var defTop=document.getElementById("def-top");
     defTop.outerHTML=wet.builder.top({
         cdnEnv:"prod",
-        breadcrumbs: [{title: "Accueil", href: "https://lam-dev.hres.ca/REP-Form/index-fr.html"}],
+        breadcrumbs: [{title: "Accueil", href: "https://www.canada.ca/fr/sante-canada/services/medicaments-produits-sante/medicaments/demandes-presentations/lignes-directrices/registre-certificats.html"}],
         lngLinks:[{
             lang:"en",
             href:"certificate-supplementary-protection-form.html",
@@ -120,7 +120,7 @@
         var defPreFooter=document.getElementById("def-preFooter");
         defPreFooter.outerHTML=wet.builder.preFooter({
             cdnEnv:"prod",
-            dateModified:"2018-08-30",
+            dateModified:"2019-01-18",
             showShare:true,
             showFeedback:true
         })
@@ -161,7 +161,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/cspAppEXT-fr_20180830_1637.min.js"></script>
+<script src="app/scripts/cspAppEXT-fr_20190118_1530.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
