--- a/mds/internal/company/en/index_internal.html
+++ b/mds/internal/company/en/index_internal.html
@@ -1,47 +1,34 @@
-<!DOCTYPE html><!--[if lt IE 9]>
-<html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]--><!--[if gt IE 8]><!--><html class="no-js" lang="en" dir="ltr"><!--<![endif]--><head><script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/rn/cdts/compiled/wet-en.js"></script><script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/rn/cdts/compiled/soyutils.js"></script><script type="text/javascript">document.write(wet.builder.refTop({
-            cdnEnv:"prod"
-        }));</script><noscript><!-- /ROOT/cdts/static/top-en.html--><!-- #include virtual="/cdts/static/top-en.html"--></noscript><meta charset="utf-8"><!--No cache--><meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/><meta http-equiv="Pragma" content="no-cache"/><meta http-equiv="Expires" content="-1"/><title>Health Canada Regulatory Enrolment Process (REP)</title><meta content="width=device-width,initial-scale=1" name="viewport"><!-- Meta data --><meta name="description" content="REP Forms"><!-- Meta data--><!--[if gte IE 9 | !IE ]><!--><link href="./GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon"><link rel="stylesheet" href="./GCWeb/css/theme.min.css"><!--<![endif]--><!--[if lt IE 9]>
-    <link href="./GCWeb/assets/favicon.ico" rel="shortcut icon"/>
-
-    <link rel="stylesheet" href="./GCWeb/css/ie8-theme.min.css"/>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="./wet-boew/js/ie8-wet-boew.min.js"></script>
-
-
-    <noscript>
-    </noscript>
-
-    <![endif]--><!--[if lte IE 9]>
-
-
-    <![endif]--><link href="//maxcdn.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet"><!-- inject:css --><!-- endinject --><noscript><link rel="stylesheet" href="./wet-boew/css/noscript.min.css"/></noscript><!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER --><script>dataLayer1 = [];</script><!-- End Google Tag Manager --><link href="styles.4a589d31ae8d8c24b6b0.bundle.css" rel="stylesheet"/></head><body vocab="http://schema.org/" typeof="WebPage"><!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER --><noscript><iframe title="Google Tag Manager" src="//www.googletagmanager.com/ns.html?id=GTM-TLGQ9K" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript><script>(function (w, d, s, l, i) {
-    w[l] = w[l] || [];
-    w[l].push({'gtm.start': new Date().getTime(), event: 'gtm.js'});
-    var f = d.getElementsByTagName(s)[0], j = d.createElement(s), dl = l != 'dataLayer1' ? '&l=' + l : '';
-    j.async = true;
-    j.src = '//www.googletagmanager.com/gtm.js?id=' + i + dl;
-    f.parentNode.insertBefore(j, f);
-})(window, document, 'script', 'dataLayer1', 'GTM-TLGQ9K');</script><!-- End Google Tag Manager --><ul id="wb-tphp"><li class="wb-slc"><a class="wb-sl" href="#wb-cont">Skip to main content</a></li><li class="wb-slc visible-sm visible-md visible-lg"><a class="wb-sl" href="#wb-info">Skip to "About this site"</a></li></ul><div id="def-top"></div><script type="text/javascript">var defTop=document.getElementById("def-top");
-    defTop.outerHTML=wet.builder.top({
-        cdnEnv:"dev"
-      /*  breadcrumbs: [{title: "Home", href: "<!--build:homeAnchor--><!--endbuild-->"}],
-        lngLinks:[{
-           lang:"fr",
-            href:"<!--build:langHtml--><!--endbuild-->",
-            text:"Français"
-        }]*/
-    })</script><main role="main" property="mainContentOfPage" class="container"><!--content starts here --><div><!--  <h1 property="name" id="wb-cont">&lt;!&ndash;build:mainHeading&ndash;&gt;&lt;!&ndash;endbuild&ndash;&gt;</h1>--><noscript><h2>JavaScript is required to complete this form</h2></noscript><app-root isInternal="yes"></app-root><!-- inject:mainContent--json>
-        <!-- endinject--></div><!--content ends here --><div id="def-preFooter"></div><script type="text/javascript">var defPreFooter=document.getElementById("def-preFooter");
-        defPreFooter.outerHTML=wet.builder.preFooter({
-            cdnEnv:"prod",
-            dateModified:"<!--build:dateToday--><!--endbuild-->",
-            showShare:false,
-            showFeedback:false
-        })</script></main><div id="def-footer"></div><script type="text/javascript">var defFooter=document.getElementById("def-footer");
-    defFooter.outerHTML=wet.builder.footer({
-        cdnEnv:"prod"
-    })</script><!--[if gte IE 9 | !IE ]><!--><script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.js"></script><script src="./wet-boew/js/wet-boew.min.js"></script><!--<![endif]--><!--[if lt IE 9]>
-<script src="./wet-boew/js/ie8-wet-boew2.min.js"></script>
-
-<![endif]--><script src="./GCWeb/js/theme.min.js"></script><!--Start add custom scripts here--><script src="./assets/lib/xml2json.js"></script><!-- inject:js --><!-- endinject --><!-- thirdParty:js  --><!-- endinject --><script type="text/javascript" src="inline.a8c2086989ef966417d6.bundle.js"></script><script type="text/javascript" src="polyfills.0fb3600b41785b357f65.bundle.js"></script><script type="text/javascript" src="main.0292143757782ad1d5b2.bundle.js"></script></body></html>
+<!DOCTYPE html><!--[if lt IE 9]><html class="no-js lt-ie9" dir="ltr"><![endif]--><!--[if gt IE 8]><!--><html xmlns="http://www.w3.org/1999/xhtml" class="no-js" lang="en" data-th-lang="#{lang}" dir="ltr"><!--<![endif]--><head><meta charset="utf-8"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/><meta http-equiv="Pragma" content="no-cache"/><meta http-equiv="Expires" content="-1"/><meta name="description" content="Regulatory Enrolment Process Forms"/><meta name="keywords" content="Health, Regulatory Enrolment Process, REP"/><meta name="author" content="Health Canada"/><meta property="dcterms.title" content="Regulatory Enrolment Process - Canada.ca"><meta property="dcterms.creator" content="Government of Canada, Health Canada"><meta property="dcterms.issued" title="W3CDTF" content="2019-01-01"><meta property="dcterms.modified" title="W3CDTF" content="{{ environment.currentDate }}"><meta property="dcterms.subject" title="gccore" content="Drugs; Pharmaceuticals, Health care products; Regulatory Enrolment Process"><meta property="dcterms.language" title="ISO639-2/T" content="eng"><!-- Web Experience Toolkit (WET) / Boîte à outils deloca l'expérience Web (BOEW)
+         wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html --><!--<title></title>--><meta content="width=device-width,initial-scale=1" name="viewport"/><!-- Additional analytics, if required. --><!--/*/ <th:block th:replace="analytics/analytics-header"></th:block> /*/--><!-- Load closure template scripts --><script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_27/cdts/compiled/soyutils.js"></script><script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_27/cdts/compiled/wet-en.js"></script><!--<script nomodule="" src="generated/ie-polyfills.min.js"></script> --><script src="./assets/js/rep.js"></script><noscript><!-- Write closure fall-back static file --><!--# include virtual="/cdts/static/refTop.html"--></noscript><link href="//maxcdn.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet"><!--<link rel="stylesheet" href="./app/styles/rep.css ">--><!-- inject:css --><!-- endinject --><!-- Write closure template --><script type="text/javascript">document.write(wet.builder.refTop({
+      cdnEnv: "prod" //jqueryEnv:false
+    }));</script><link href="styles.4a589d31ae8d8c24b6b0.bundle.css" rel="stylesheet"/></head><body vocab="http://schema.org/" typeof="WebPage"><div id="def-top"><!-- Write closure fall-back static file --><!-- ./web-boew/cdts/static/top-en.html--><!--# include virtual="/rep-dev/cdts/static/top-en.html"--></div><!-- Write closure template --><script type="text/javascript">var defTop = document.getElementById("def-top");
+  defTop.outerHTML = wet.builder.top({
+    cdnEnv: "prod",
+    search: true,
+    lngLinks: [{
+      lang: "fr",
+      href: "<!--build:langHtml--><!--endbuild-->",
+      text: "Français"
+    }],
+    showPreContent: false,
+    breadcrumbs: [{title: "Home", href: "https://www.canada.ca/en.html"},
+      {title: "Health Canada", href: "https://www.canada.ca/en/health-canada.html"},
+      {title: "Regulatory Enrolment Process Forms", href: "https://lam-dev.hres.ca/rep-dev/mds_index.html"}]
+  });</script><main role="main" property="mainContentOfPage" class="container"><!--content starts here --><div class="row"><div class="col-md-12"><!--<h1 property="name" id="wb-cont">Company Template: Regulatory Enrolment Process (REP)</h1>
+      <p class="pagetag">
+        <strong>From <a href="http://www.healthycanadians.gc.ca/department-ministere/hc-sc-eng.php?_ga=1.203751760.1566644155.1449063473">Health Canada</a></strong>
+      </p> --></div><app-root isInternal="yes"></app-root><!-- inject:mainContent--json>
+    <!-- endinject--></div><!--content ends here --><div id="def-preFooter"><!-- Write closure fall-back static file --><!-- ./web-boew/cdts/static/preFooter-en.html--><!--# include virtual="/rep-dev/cdts/static/preFooter-en.html"--></div><!-- Write closure template --><script type="text/javascript">var defPreFooter = document.getElementById("def-preFooter");
+    defPreFooter.outerHTML = wet.builder.preFooter({
+      cdnEnv: "prod",
+      dateModified: 'Feb 15, 2019',
+      showPostContent: true,
+      showFeedback:true,
+      showShare:true
+    });</script></main><div id="def-footer"><!-- Write closure fall-back static file --><!-- ./web-boew/cdts/static/footer-en.html--><!--# include virtual="/rep-dev/cdts/static/footer-en.html"--></div><!-- Write closure template --><script type="text/javascript">var defFooter = document.getElementById("def-footer");
+  defFooter.outerHTML = wet.builder.footer({
+    cdnEnv: "prod"
+  });</script><!-- Write closure template --><script type="text/javascript">document.write(wet.builder.refFooter({
+    cdnEnv: "prod",
+    exitScript: false
+  }));</script><!--Start add custom scripts here--><script src="./assets/lib/xml2json.js"></script><!-- inject:js --><!-- endinject --><!-- thirdParty:js  --><!-- endinject --><script type="text/javascript" src="inline.76ce658d7351a8fd08fb.bundle.js"></script><script type="text/javascript" src="polyfills.e951159226ee3e1ca41c.bundle.js"></script><script type="text/javascript" src="main.78d76265b92bc320119e.bundle.js"></script></body></html>
