--- a/certificate/formulaire-certificat-protection-supplementaire.html
+++ b/certificate/formulaire-certificat-protection-supplementaire.html
@@ -25,7 +25,7 @@
     <meta http-equiv="Pragma" content="no-cache"/>
     <meta http-equiv="Expires" content="-1"/>
 
-    <title>Formulaire de la demande de certificat de protection supplémentaire de Santé Canada</title>
+    <title>Formulaire de demande de certificat de protection supplémentaire de Santé Canada</title>
     <meta content="width=device-width,initial-scale=1" name="viewport">
     <!-- Meta data -->
     <meta name="description" content="REP Forms">
@@ -100,7 +100,7 @@
 
     <!--content starts here -->
     <div>
-        <h1 property="name" id="wb-cont">Formulaire de la demande de certificat de protection supplémentaire (CPS)</h1>
+        <h1 property="name" id="wb-cont">Formulaire de demande de certificat de protection supplémentaire (CPS)</h1>
         <noscript>
             <h2>JavaScript doit être activé pour remplir ce formulaire</h2>
         </noscript>
@@ -120,7 +120,7 @@
         var defPreFooter=document.getElementById("def-preFooter");
         defPreFooter.outerHTML=wet.builder.preFooter({
             cdnEnv:"prod",
-            dateModified:"2019-03-20",
+            dateModified:"2019-04-02",
             showShare:true,
             showFeedback:true
         })
@@ -161,7 +161,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/cspAppEXT-fr_20190320_1557.min.js"></script>
+<script src="app/scripts/cspAppEXT-fr_20190402_1145.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
