--- a/index-fr.html
+++ b/index-fr.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="./GCWeb/css/ie8-theme.min.css"/>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="./wet-boew/js/ie8-wet-boew.min.js"></script>
+    <script src="https://food-guide.canada.ca/wet-boew/js/deps/jquery.magnific-popup.min.js"></script>
     <![endif]-->
     <!--[if lte IE 9]>
 
