--- a/certificateBrexit/formulaire-certificat-protection-supplementaire-2019-2020.html
+++ b/certificateBrexit/formulaire-certificat-protection-supplementaire-2019-2020.html
@@ -88,10 +88,10 @@
     var defTop=document.getElementById("def-top");
     defTop.outerHTML=wet.builder.top({
         cdnEnv:"prod",
-        breadcrumbs: [{title: "Accueil", href: "https://lam-dev.hres.ca/REP-Form-Internal/index-fr.html"}],
+        breadcrumbs: [{title: "Accueil", href: "https://www.canada.ca/fr/sante-canada/services/medicaments-produits-sante/medicaments/demandes-presentations/lignes-directrices/registre-certificats.html"}],
         lngLinks:[{
             lang:"en",
-            href:"certificate-supplementary-protection-form-internal.html",
+            href:"certificate-supplementary-protection-form-2019-2020.html",
             text:"English"
         }]
     })
@@ -161,7 +161,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/cspAppINT-fr_20190506_1516.min.js"></script>
+<script src="app/scripts/cspAppEXT-fr_20190506_1516.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
