--- a/wet4027/company/companyINT-en.html
+++ b/wet4027/company/companyINT-en.html
@@ -16,7 +16,7 @@
     <meta property="dcterms.title" content="Company Template: Regulatory Enrolment Process - Canada.ca">
     <meta property="dcterms.creator" content="Government of Canada, Health Canada">
     <meta property="dcterms.issued" title="W3CDTF" content="2019-01-01">
-    <meta property="dcterms.modified" title="W3CDTF" content="2019-07-24">
+    <meta property="dcterms.modified" title="W3CDTF" content="2019-07-25">
     <meta property="dcterms.subject" title="gccore" content="Drugs; Pharmaceuticals, Health care products; Regulatory Enrolment Process">
     <meta property="dcterms.language" title="ISO639-2/T" content="eng">
 
@@ -88,7 +88,7 @@
         showPreContent: false,
         breadcrumbs: [{title: "Home", href: "https://www.canada.ca/en.html"},
             {title: "Health Canada", href: "https://www.canada.ca/en/health-canada.html"},
-            {title: "Regulatory Enrolment Process Forms", href: "https://lam-dev.hres.ca/REP-Form-Internal/index.html"}]
+            {title: "Regulatory Enrolment Process", href: "https://lam-dev.hres.ca/REP-Form-Internal/index.html"}]
     });
 </script>
 
@@ -139,7 +139,7 @@
         var defPreFooter = document.getElementById("def-preFooter");
         defPreFooter.outerHTML = wet.builder.preFooter({
             cdnEnv: "prod",
-            dateModified: "2019-07-24"
+            dateModified: "2019-07-25"
         });
     </script>
 </main>
@@ -179,7 +179,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/companyAppINT-en_20190724_1037.min.js"></script>
+<script src="app/scripts/companyAppINT-en_20190725_1049.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
