--- a/index.html
+++ b/index.html
@@ -176,6 +176,9 @@
                     <div class="row">
                         <a href="./wet4027/product/product.html#main">Product Information Template - External (Aug 05, 2019, v3.0.4)</a>
                     </div>
+                    <div class="row">
+                        <a href="./wet4027/converter/converter.html#main">Product Information Template Data Converter: Version 2 to Version 3 - External (Aug 14, 2019, v3.0.4)</a>
+                    </div>
                     <!--<div class="row">-->
                         <!--<a href="./wet4027/transactionCostRecovery/transactionEXT-en.html#main">Regulatory Transaction Template – COST RECOVERY - External (Mar 18, 2019)</a>-->
                     <!--</div>-->
@@ -236,7 +239,7 @@
 
             <div class="datemod col-xs-12 mrgn-tp-lg">
                 <dl id="wb-dtmd">
-                    <dt>Date modified: Aug 05, 2019</dt>
+                    <dt>Date modified: Aug 14, 2019</dt>
                 </dl>
             </div>
         </div>
